ec2.tf
# key pair

resource "aws_key_pair" "my_key" {
    key_name = "terra-key-ec2"
    public_key = file("terra-key-ec2.pub")
}

# VPC and security group

resource "aws_default_vpc" "default" {
  
}

resource "aws_security_group" "my_security_group" {
  name = "automate-sg"
  description = "This will add a TF generated security group"
  vpc_id = aws_default_vpc.default.id

  ingress  {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/16"]
    description = "SSH open"
  }

  ingress  {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/16"]
    description = "HTTP open"
  }

  ingress  {
    from_port = 8000
    to_port = 8000
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/16"]
    description = "Flask app"
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = [ "0.0.0.0/16" ]
    description = "all access open"
  }


  tags = {
    Name = "automate-sg-tag"
  }
}


# ec2 instance

resource "aws_instance" "my_instance" {
  key_name = aws_key_pair.my_key.key_name
  security_groups = [ aws_security_group.my_security_group.name ]
  instance_type = "t2.micro"
  ami = "ami-0fe18bc3cfa53a248"

  root_block_device {
    volume_size = 15
    volume_type = "gp3"
  }

  tags = {
    Name = "Keerthan-instance"
  }
}
